added: tests template

--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     },
     "homepage": "https://github.com/Nello-Moreira/server_template#readme",
     "dependencies": {
+        "@babel/plugin-transform-runtime": "^7.15.8",
+        "@babel/preset-env": "^7.15.8",
+        "babel-jest": "^27.3.1",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "jest": "^27.3.1",
         "joi": "^17.4.2",
-        "pg": "^8.7.1"
+        "pg": "^8.7.1",
+        "supertest": "^6.1.6"
     }
 }
