implemented: envs variables and initial configs

--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
-    "name": "server_template",
-    "type": "module",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Nello-Moreira/server_template.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Nello-Moreira/server_template/issues"
-    },
-    "homepage": "https://github.com/Nello-Moreira/server_template#readme",
-    "dependencies": {
-        "@babel/plugin-transform-runtime": "^7.15.8",
-        "@babel/preset-env": "^7.15.8",
-        "babel-jest": "^27.3.1",
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "jest": "^27.3.1",
-        "joi": "^17.4.2",
-        "pg": "^8.7.1",
-        "supertest": "^6.1.6"
-    }
+	"name": "server_template",
+	"type": "module",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start:production": "NODE_ENV=production node ./index.js",
+		"start:development": "NODE_ENV=development nodemon ./index.js",
+		"start": "NODE_ENV=test npx jest --watch",
+		"test": "NODE_ENV=test npx jest"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Nello-Moreira/server_template.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Nello-Moreira/server_template/issues"
+	},
+	"homepage": "https://github.com/Nello-Moreira/server_template#readme",
+	"dependencies": {
+		"@babel/plugin-transform-runtime": "^7.15.8",
+		"@babel/preset-env": "^7.15.8",
+		"babel-jest": "^27.3.1",
+		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"faker": "^5.5.3",
+		"jest": "^27.3.1",
+		"joi": "^17.4.2",
+		"pg": "^8.7.1",
+		"readline-sync": "^1.4.10",
+		"supertest": "^6.1.6"
+	}
 }
