--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "NODE_ENV=production node ./index.js",
-		"start:development": "NODE_ENV=development nodemon ./index.js",
-		"start:test_driven": "NODE_ENV=test npx jest --watch",
-		"test": "NODE_ENV=test npx jest"
+		"start": "NODE_ENV=production node ./src/index.js",
+		"start:development": "NODE_ENV=development nodemon ./src/index.js",
+		"start:test_driven": "NODE_ENV=test npx jest --watch -i",
+		"test": "NODE_ENV=test npx jest -i"
 	},
 	"repository": {
 		"type": "git",
@@ -22,17 +22,25 @@
 	},
 	"homepage": "https://github.com/Nello-Moreira/server_template#readme",
 	"dependencies": {
+		"express": "^4.17.1",
+		"cors": "^2.8.5",
+		"joi": "^17.4.2",
+		"pg": "^8.7.1"
+	},
+	"devDependencies": {
+		"eslint": "^8.2.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "8.3.0",
+		"eslint-plugin-import": "^2.25.3",
+		"husky": "^7.0.4",
+		"prettier": "2.4.1",
+		"readline-sync": "^1.4.10",
+		"faker": "^5.5.3",
 		"@babel/plugin-transform-runtime": "^7.15.8",
 		"@babel/preset-env": "^7.15.8",
 		"babel-jest": "^27.3.1",
-		"cors": "^2.8.5",
-		"dotenv": "^10.0.0",
-		"express": "^4.17.1",
-		"faker": "^5.5.3",
+		"supertest": "^6.1.6",
 		"jest": "^27.3.1",
-		"joi": "^17.4.2",
-		"pg": "^8.7.1",
-		"readline-sync": "^1.4.10",
-		"supertest": "^6.1.6"
+		"dotenv": "^10.0.0"
 	}
 }
