--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"express": "^4.17.1",
 		"cors": "^2.8.5",
 		"joi": "^17.4.2",
-		"pg": "^8.7.1"
+		"pg": "^8.7.1",
+		"dotenv": "^10.0.0"
 	},
 	"devDependencies": {
 		"eslint": "^8.2.0",
@@ -40,7 +41,6 @@
 		"@babel/preset-env": "^7.15.8",
 		"babel-jest": "^27.3.1",
 		"supertest": "^6.1.6",
-		"jest": "^27.3.1",
-		"dotenv": "^10.0.0"
+		"jest": "^27.3.1"
 	}
 }
