--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,16 @@
 			}
 		],
 		"indent": [2, "tab", { "SwitchCase": 1, "VariableDeclarator": 1 }],
-		"no-tabs": 0
+		"no-tabs": 0,
+		"comma-dangle": [
+			"error",
+			{
+				"arrays": "always-multiline",
+				"objects": "always-multiline",
+				"imports": "always-multiline",
+				"exports": "always-multiline",
+				"functions": "never"
+			}
+		]
 	}
 }
