--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "server_template",
-	"type": "module",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "NODE_ENV=production node ./src/index.js",
-		"start:development": "NODE_ENV=development nodemon ./src/index.js",
+		"start": "NODE_ENV=production node ./dist/src/index.js",
+		"start:development": "NODE_ENV=development npx nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/index.ts\"",
 		"start:test_driven": "NODE_ENV=test npx jest --watch -i",
-		"test": "NODE_ENV=test npx jest -i"
+		"test": "NODE_ENV=test npx jest -i",
+		"build": "npx tsc --outDir dist"
 	},
 	"repository": {
 		"type": "git",
@@ -22,25 +22,34 @@
 	},
 	"homepage": "https://github.com/Nello-Moreira/server_template#readme",
 	"dependencies": {
-		"express": "^4.17.1",
 		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
 		"joi": "^17.4.2",
-		"pg": "^8.7.1",
-		"dotenv": "^10.0.0"
+		"pg": "^8.7.1"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.12",
+		"@types/dotenv": "^8.2.0",
+		"@types/express": "^4.17.13",
+		"@types/faker": "^5.5.9",
+		"@types/jest": "^27.0.3",
+		"@types/node": "^16.11.12",
+		"@types/pg": "^8.6.1",
+		"@types/readline-sync": "^1.4.4",
+		"@types/supertest": "^2.0.11",
 		"eslint": "^8.2.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-import": "^2.25.3",
+		"faker": "^5.5.3",
 		"husky": "^7.0.4",
+		"jest": "^27.3.1",
 		"prettier": "2.4.1",
 		"readline-sync": "^1.4.10",
-		"faker": "^5.5.3",
-		"@babel/plugin-transform-runtime": "^7.15.8",
-		"@babel/preset-env": "^7.15.8",
-		"babel-jest": "^27.3.1",
 		"supertest": "^6.1.6",
-		"jest": "^27.3.1"
+		"ts-jest": "^27.1.1",
+		"ts-node": "^10.4.0",
+		"typescript": "^4.5.2"
 	}
 }
