--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
 		"@types/pg": "^8.6.1",
 		"@types/readline-sync": "^1.4.4",
 		"@types/supertest": "^2.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.7.0",
+		"@typescript-eslint/parser": "^5.7.0",
 		"eslint": "^8.2.0",
 		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-airbnb-typescript": "^16.1.0",
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-import": "^2.25.3",
 		"faker": "^5.5.3",
