--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"faker": "^5.5.3",
 		"husky": "^7.0.4",
 		"jest": "^27.3.1",
+		"nodemon": "^2.0.15",
 		"prettier": "2.4.1",
 		"readline-sync": "^1.4.10",
 		"supertest": "^6.1.6",
