--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "NODE_ENV=production node ./dist/src/index.js",
-		"start:development": "NODE_ENV=development npx nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/index.ts\"",
+		"start:dev": "NODE_ENV=development npx nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/index.ts\"",
 		"start:test_driven": "NODE_ENV=test npx jest --watch -i",
 		"test": "NODE_ENV=test npx jest -i",
-		"build": "npx tsc --outDir dist"
+		"build": "npx tsc --outDir dist",
+		"typeorm": "NODE_ENV=development ts-node ./node_modules/typeorm/cli"
 	},
 	"repository": {
 		"type": "git",
@@ -22,18 +23,23 @@
 	},
 	"homepage": "https://github.com/Nello-Moreira/server_template#readme",
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"joi": "^17.4.2",
-		"pg": "^8.7.1"
+		"jsonwebtoken": "^8.5.1",
+		"pg": "^8.7.1",
+		"reflect-metadata": "^0.1.13",
+		"typeorm": "^0.2.41"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.12",
-		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.13",
 		"@types/faker": "^5.5.9",
 		"@types/jest": "^27.0.3",
+		"@types/jsonwebtoken": "^8.5.6",
 		"@types/node": "^16.11.12",
 		"@types/pg": "^8.6.1",
 		"@types/readline-sync": "^1.4.4",
