--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,11 @@
 	"compilerOptions": {
 		"noImplicitAny": true,
 		"esModuleInterop": true,
-		"target": "ES6"
-	}
+		"target": "ES6",
+		"module": "commonjs",
+		"moduleResolution": "node",
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true
+	},
+	"exclude": ["node_modules"]
 }
